# vessel

./: .env.example  .gitignore  .prettierrc  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_RULE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.windows  README.md  SECURITY.md  jest.config.js  package-lock.json  package.json
.cargo/: config.toml
apps/desktop/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/enclave/: .env.example  Cargo.toml  docker-compose.yml
apps/enclave/src/: config.rs  error.rs  main.rs
apps/enclave/src/api/: chat.rs  key.rs  mod.rs  routes.rs
apps/enclave/src/crypto/: encryption.rs
apps/enclave/src/services/: mod.rs  openai.rs
apps/enclave/src/types/: encrypted.rs
apps/enclave/tests/: crypto.mjs
apps/server/: .env.example  Cargo.toml  build.rs  diesel.toml
apps/server/migrations/2025-08-07-152325_users/: up.sql
apps/server/migrations/2025-08-22-092047_map/: down.sql  up.sql
apps/server/migrations/2025-09-08-073323_create_rbac_tables/: down.sql  up.sql
apps/server/migrations/2025-09-11-151252_custom_node/: down.sql  up.sql
apps/server/migrations/2025-09-19-060609_create_streams/: down.sql  up.sql
apps/server/migrations/2026-01-12-023507_dyndashboard/: down.sql  up.sql
apps/server/migrations/2026-01-31-000001_create_recordings/: down.sql  up.sql
apps/server/src/: broker_rtp.rs  broker_rtsp.rs  config.rs  error.rs  hash.rs  initial.rs  initial_db.rs  lib.rs  logo.rs  main.rs  mqtt.rs  routes.rs  rtp.rs  rtsp.rs  state.rs  tunnel_control.rs
apps/server/src/db/: conn.rs  mod.rs  models.rs  repository.rs  schema.rs
apps/server/src/db/repository/: dashboards.rs  mod.rs  rbac.rs  recordings.rs  streams.rs
apps/server/src/flow/: binary_store.rs  engine.rs  manager_state.rs  mod.rs  types.rs
apps/server/src/flow/nodes/: add_numbers.rs  branch.rs  calc.rs  condition.rs  custom_node.rs  dashboard_event_listener.rs  decode_h264.rs  decode_opus.rs  gst_decoder.rs  http.rs  interval.rs  json_modify.rs  json_selector.rs  log_message.rs  logic_operator.rs  loop_node.rs  mod.rs  mqtt_publish.rs  mqtt_subscribe.rs  number.rs  rtp_stream_in.rs  set_variable.rs  set_variable_with_exec.rs  show_toast.rs  start.rs  type_converter.rs  websocket_on.rs  websocket_send.rs  yolo_detect.rs
apps/server/src/handler/: auth.rs  configurations.rs  custom_nodes.rs  dashboards.rs  device_tokens.rs  devices.rs  entities.rs  flows.rs  ha.rs  integration.rs  log.rs  map.rs  mod.rs  permissions.rs  recordings.rs  roles.rs  sdr.rs  stat.rs  state.rs  storage.rs  streams.rs  tunnel.rs  users.rs  ws_handler.rs
apps/server/src/handler/ws/: dashboard_component_event.rs  handlers.rs  mod.rs  webrtc.rs
apps/server/src/init/: db_record.rs  mod.rs  streams.rs
apps/server/src/lib/: entity_map.rs  mod.rs  stream_checker.rs
apps/server/src/media/: adapter.rs  mod.rs  rtp_push.rs  rtsp_pull.rs
apps/server/src/recording/: manager.rs  mod.rs  muxer.rs  service.rs
apps/server/src/streaming/: hls.rs  manager.rs  mod.rs
apps/server/src/utils/: entity_map.rs  hash.rs  stream_checker.rs  system_configs.rs
apps/server/tests/: recording_manager_tests.rs  recordings_repository_tests.rs  state_tests.rs
apps/server/tests/common/: mod.rs
docs/: concepts.md  (+9 more)
(+687 files in other folders)
