[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
tokio-stream = "0.1"
url = "2"
rumqttd = "0.19.0"
toml = "0.9.5"
rumqttc = "0.24.0"
webrtc = "0.13.0"
clap = { version = "4.5.4", features = ["derive"] } 
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
bytes = "1.10.1"
jsonwebtoken = "9"
axum-extra = { version = "0.9", features = ["typed-header"] }
chrono = { version = "0.4.41", features = ["serde"] }
async-trait = "0.1.88"
dotenvy = "0.15.7"
diesel = { version = "2.2.0", features = ["sqlite", "chrono", "r2d2", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.2.0"
bcrypt = "0.17.0"
r2d2 = "0.8"
dashmap = "6.1.0"
rtp = "0.13.0"
rand = "0.9.2"
base64 = "0.22.1"
tracing-appender = "0.2.3"
rust-embed = "8"
mime_guess = "2.0"
sysinfo = "0.36.1"
reqwest = "0.12.23"
gstreamer = "0.24"
gstreamer-app = "0.24"
crossbeam-channel = "0.5.15"

[[bin]]
name = "server"
path = "src/main.rs"
