[package]
name = "desktop"
version = "0.1.0"
description = "Vessel desktop shell with Tauri"
authors = ["Vessel Contributors"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["path-all", "dialog-open", "shell-sidecar"] }
toml = "0.8"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
